[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wayback-recovery"
version = "0.1.0"
description = "Recover websites from Wayback Machine, Common Crawl, and live CDNs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "David / Kynni" }
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
wayback-recovery = "wayback_recovery.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wayback_recovery"]
